iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Sat Aug 20 14:14:24 2016
*nat
:PREROUTING ACCEPT [17:1809]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1:60]
:POSTROUTING ACCEPT [1:60]
-A POSTROUTING -s 10.0.8.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Sat Aug 20 14:14:24 2016
# Generated by iptables-save v1.4.21 on Sat Aug 20 14:14:24 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [91:9908]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1723 -m comment --comment vpn_pptp -j ACCEPT
-A INPUT -p gre -m comment --comment vpn_pptp -j ACCEPT
-A INPUT -p udp -m udp --dport 500 -m comment --comment vpn_l2tp -j ACCEPT
-A INPUT -p udp -m udp --dport 4500 -m comment --comment vpn_l2tp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5000 -m comment --comment ngrok_http -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5001 -m comment --comment ngrok_https -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4443 -m comment --comment ngrok_tunnel -j ACCEPT
-A INPUT -p tcp -m tcp --dport 14001 -m comment --comment ss_server_tcp -j ACCEPT
-A INPUT -p udp -m udp --dport 14001 -m comment --comment ss_server_udp -j ACCEPT
-A INPUT -p udp --match multiport --dport 60001:61000 -m comment --comment mosh_server_udp -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -s 10.0.8.0/24 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j TCPMSS --set-mss 1356
COMMIT
# Completed on Sat Aug 20 14:14:24 2016
